apps/immich/patch-service-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
